Fix messages words overflow if no space availables in word

--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -487,3 +487,7 @@
     rgba(251, 191, 36, 0.1) 20px
   );
 }
+
+.overflowWrapBreakword {
+  overflow-wrap: break-word;
+}
